deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-client-app
  labels:
    app: bank-client-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-client-app
      version: v1
  template:
    metadata:
      labels:
        app: bank-client-app
        version: v1
    spec:
      containers:
        - name: svc
          image: hakob21/bank-client-app:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bank-client-app
  labels:
    app: bank-client-app
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: bank-client-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-validator-service
  labels:
    app: user-validator-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-validator-service
      version: v1
  template:
    metadata:
      labels:
        app: user-validator-service
        version: v1
    spec:
      containers:
        - name: svc
          image: hakob21/user-validator-service:v1
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: user-validator-service
  labels:
    app: user-validator-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: user-validator-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master-data-service
  labels:
    app: master-data-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: master-data-service
      version: v1
  template:
    metadata:
      labels:
        app: master-data-service
        version: v1
    spec:
      containers:
        - name: svc
          image: hakob21/master-data-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: master-data-service
  labels:
    app: master-data-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: master-data-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-rating-service
  labels:
    app: customer-rating-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-rating-service
      version: v1
  template:
    metadata:
      labels:
        app: customer-rating-service
        version: v1
    spec:
      containers:
        - name: svc
          image: hakob21/customer-rating-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: customer-rating-service
  labels:
    app: customer-rating-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: customer-rating-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sms-notification-service
  labels:
    app: sms-notification-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sms-notification-service
      version: v1
  template:
    metadata:
      labels:
        app: sms-notification-service
        version: v1
    spec:
      containers:
        - name: svc
          image: hakob21/sms-notification-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sms-notification-service
  labels:
    app: sms-notification-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: sms-notification-service
