delayForTimeout.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-delay-sms-notification-service
spec:
  hosts:
  - sms-notification-service
  http:
  - fault:
      delay:
        fixedDelay: 7s
        percentage:
          value: 100
    route:
    - destination:
        host: sms-notification-service
