timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-timeout-master-data-service
spec:
  hosts:
  - master-data-service
  http:
  - route:
    - destination:
        host: master-data-service
    timeout: 0.5s
